--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/case-editor/case-edit-submit/case-edit-submit.html
@@ -41,14 +41,16 @@
                       [formGroup]="editForm.controls['data']" [topLevelFormGroup]="editForm.controls['data']"
                       [caseField]="summaryCaseField(field)" [context]="paletteContext" [caseFields]="contextFields"></ccd-field-read>
                   </td>
-                  <td class="valign-top check-your-answers__change case-field-change">
-                    <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
-                      href="javascript:void(0)">
-                      <span class="text-16" attr.aria-label="{{'Change' | rpxTranslate}} {{ field.label | rpxTranslate }}">
-                        {{'Change' | rpxTranslate}}
-                      </span>
-                    </a>
-                  </td>
+                  <ng-container *ngIf="!caseEdit.isCaseFlagSubmission">
+                    <td class="valign-top check-your-answers__change case-field-change">
+                      <a *ngIf="isChangeAllowed(field)" (click)="navigateToPage(page.id)"
+                        href="javascript:void(0)">
+                        <span class="text-16" attr.aria-label="{{'Change' | rpxTranslate}} {{ field.label | rpxTranslate }}">
+                          {{'Change' | rpxTranslate}}
+                        </span>
+                      </a>
+                    </td>
+                  </ng-container>
                 </tr>
               </ng-container>
             </ng-container>
