EUI-8711: Case Flags v2.1 - Group internal and external flag collections by groupId for internal users
Ensure internal and external collections of flag data are grouped by groupId into one instance of the `Flags` object per party, for internal users.

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/read-case-flag-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/read-case-flag-field.component.html
@@ -8,7 +8,7 @@
 
 <ng-container *ngIf="context !== paletteContext.CHECK_YOUR_ANSWER">
   <ng-container [ngSwitch]="displayContextParameter">
-    <ng-container *ngSwitchCase="readSupportMode">
+    <ng-container *ngSwitchCase="caseFlagDisplayContextParameter.READ_EXTERNAL">
       <h2 id="read-case-flag-title" class="govuk-heading-l">
         {{ 'Support requested' | rpxTranslate }}
       </h2>
