EUI-8706: Case Flags v2.1 - Determine correct location for adding new flags
Determine the correct location for a flag to be added - either internal or external - based on whether the flag is marked as "internal only" if of type "Other", or its `externallyAvailable` attribute if not of type "Other".

--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/select-flag-type/select-flag-type.component.html
@@ -37,7 +37,7 @@
             <div class="govuk-checkboxes__item govuk-!-margin-top-4"
               *ngIf="!isDisplayContextParameterExternal && !isCaseLevelFlag">
               <input class="govuk-checkboxes__input" id="is-visible-externally" type="checkbox"
-                [name]="caseFlagFormField.IS_VISIBLE_EXTERNALLY" [formControlName]="caseFlagFormField.IS_VISIBLE_EXTERNALLY">
+                [name]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY" [formControlName]="caseFlagFormField.IS_VISIBLE_INTERNALLY_ONLY">
               <label class="govuk-label govuk-checkboxes__label" for="is-visible-externally">
                 {{'This flag should only be visible to HMCTS Staff' | rpxTranslate}}
               </label>
