--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/qualifying-questions/qualifying-question-options/qualifying-question-options.component.html
@@ -3,30 +3,36 @@
     <fieldset class="govuk-fieldset">
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
         <h1 class="govuk-fieldset__heading">
-          {{ 'Are you contacting us about any of the following:' | rpxTranslate }}
+          {{ 'Raise a new query' | rpxTranslate }}
         </h1>
       </legend>
+      <h2 class="govuk-heading-m govuk-!-margin-top-10">
+        {{ 'Select the type of query you are raising:' | rpxTranslate }}
+      </h2>
 
       <ng-container *ngIf="displayError">
         <p class="govuk-error-message">
-          <span class="govuk-visually-hidden">{{ 'Error:' | rpxTranslate }} </span>{{ qualifyingQuestionsErrorMessage.SELECT_AN_OPTION | rpxTranslate }}
+          <span class="govuk-visually-hidden">{{ 'Error:' | rpxTranslate }} </span>{{
+          qualifyingQuestionsErrorMessage.SELECT_AN_OPTION | rpxTranslate }}
         </p>
       </ng-container>
 
       <div class="govuk-radios" data-module="govuk-radios">
         <ng-container *ngFor="let qualifyingQuestion of qualifyingQuestions$ | async; let isLast = last">
           <ng-container *ngIf="isLast">
-            <hr>
+            <div class="govuk-radios__divider">{{ 'or' | rpxTranslate }}</div>
           </ng-container>
           <div class="govuk-radios__item">
-            <input class="govuk-radios__input"
-                   id="{{qualifyingQuestion.name}}"
-                   name="qualifyingQuestionOption"
-                   type="radio"
-                   [formControl]="qualifyingQuestionsControl"
-                   [value]="qualifyingQuestion">
-            <label class="govuk-label govuk-radios__label"
-                   [for]="qualifyingQuestion.name">{{ qualifyingQuestion.name | rpxTranslate }}</label>
+            <input class="govuk-radios__input" id="{{qualifyingQuestion.name}}" name="qualifyingQuestionOption"
+              type="radio" [formControl]="qualifyingQuestionsControl" [value]="qualifyingQuestion">
+            <label class="govuk-label govuk-radios__label" [for]="qualifyingQuestion.name">{{ qualifyingQuestion.name |
+              rpxTranslate }}</label>
+            <div *ngIf="isLast" class="govuk-hint govuk-radios__hint">
+              {{ '(To reply to an existing query' | rpxTranslate }}
+              <a class="govuk-link" href="javascript:void(0)" (click)="click()">
+                {{ 'click here' | rpxTranslate }}
+              </a>.)
+            </div>
           </div>
         </ng-container>
       </div>
