--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -10,7 +10,7 @@
           <h3>What happens next</h3>
           <p>Our team will read your query and will respond</p>
           <p>When the response is available it will be added to the 'Queries' section.</p>
-          <p>You can <a class="govuk-link" href="javascript:void(0)">Go back to the case</a></p>
+          <p>You can <a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">Go back to the case</a></p>
         </div>
       </ng-container>
       <ng-container *ngIf="queryCreateContext === queryCreateContextEnum.RESPOND">
@@ -19,8 +19,8 @@
           <div class="govuk-panel__body">This query response has been added to the case</div>
         </div>
         <div class="govuk-body">
-          You can <a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">return to tasks</a> or
-					<a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">Go back to the case</a>
+          You can <a class="govuk-link" id="tasks-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">return to tasks</a> or
+					<a class="govuk-link" id="case-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">Go back to the case</a>
         </div>
       </ng-container>
     </div>
