--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -3,24 +3,28 @@
     <div class="govuk-grid-column-two-thirds">
       <ng-container *ngIf="queryCreateContext === queryCreateContextEnum.NEW_QUERY || queryCreateContext === queryCreateContextEnum.FOLLOWUP">
         <div class="govuk-panel govuk-panel--confirmation">
-          <h1 class="govuk-panel__title">Query submitted</h1>
-          <div class="govuk-panel__body">Your query has been sent to HMCTS</div>
+          <h1 class="govuk-panel__title">{{'Query submitted' | rpxTranslate}}</h1>
+          <div class="govuk-panel__body">{{'Your query has been sent to HMCTS' | rpxTranslate}}</div>
         </div>
         <div class="govuk-body">
-          <h3>What happens next</h3>
-          <p>Our team will read your query and will respond</p>
-          <p>When the response is available it will be added to the 'Queries' section.</p>
-          <p>You can <a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">Go back to the case</a></p>
+          <h3>{{'What happens next' | rpxTranslate}}</h3>
+          <p>{{'Our team will read your query and will respond' | rpxTranslate}}</p>
+          <p>{{'When the response is available it will be added to the \'Queries\' section.' | rpxTranslate}}</p>
+          <p>
+            {{'You can' | rpxTranslate}}
+            <a class="govuk-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">{{'Go back to the case' | rpxTranslate}}</a>
+          </p>
         </div>
       </ng-container>
       <ng-container *ngIf="queryCreateContext === queryCreateContextEnum.RESPOND">
         <div class="govuk-panel govuk-panel--confirmation">
-          <h1 class="govuk-panel__title">Query response submitted</h1>
-          <div class="govuk-panel__body">This query response has been added to the case</div>
+          <h1 class="govuk-panel__title">{{'Query response submitted' | rpxTranslate}}</h1>
+          <div class="govuk-panel__body">{{'This query response has been added to the case' | rpxTranslate}}</div>
         </div>
         <div class="govuk-body">
-          You can <a class="govuk-link" id="tasks-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">return to tasks</a> or
-					<a class="govuk-link" id="case-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">Go back to the case</a>
+          {{'You can' | rpxTranslate}}
+          <a class="govuk-link" id="tasks-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">{{'return to tasks' | rpxTranslate}}</a> or
+					<a class="govuk-link" id="case-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">{{'Go back to the case' | rpxTranslate}}</a>
         </div>
       </ng-container>
     </div>
