--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/components/query-confirmation/query-confirmation.component.html
@@ -7,7 +7,7 @@
           <div class="govuk-panel__body">{{'Your query has been sent to HMCTS' | rpxTranslate}}</div>
         </div>
         <div class="govuk-body">
-          <h3>{{'What happens next' | rpxTranslate}}</h3>
+          <h3 class="govuk-heading-s">{{'What happens next' | rpxTranslate}}</h3>
           <p>{{'Our team will read your query and will respond' | rpxTranslate}}</p>
           <p>{{'When the response is available it will be added to the \'Queries\' section.' | rpxTranslate}}</p>
           <p>
@@ -23,8 +23,8 @@
         </div>
         <div class="govuk-body">
           {{'You can' | rpxTranslate}}
-          <a class="govuk-link" id="tasks-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">{{'return to tasks' | rpxTranslate}}</a> or
-					<a class="govuk-link" id="case-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">{{'Go back to the case' | rpxTranslate}}</a>
+          <a class="govuk-link" id="tasks-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}/tasks">{{'return to tasks' | rpxTranslate}}</a> or
+          <a class="govuk-link" id="case-link" href="javascript:void(0)" routerLink="/cases/case-details/{{caseId}}">{{'Go back to the case' | rpxTranslate}}</a>
         </div>
       </ng-container>
     </div>
