--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/query-management/read-query-management-field.component.html
@@ -9,7 +9,7 @@
 <ng-template #singleQueryDetails>
   <br>
   <p>
-    <a class="govuk-link" href="javascript:void(0)">{{ 'Back to queries' | rpxTranslate }}</a>
+    <a class="govuk-link" href="javascript:void(0)" (click)="backToQueryListPage()">{{ 'Back to queries' | rpxTranslate }}</a>
   </p>
 
   <ccd-query-details
