--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
@@ -50,7 +50,7 @@
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE: caseFlagFieldState.FLAG_COMMENTS)">
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_COMMENTS)">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'comments' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -64,7 +64,7 @@
     </dd>
     <dd class="govuk-summary-list__actions">
       <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE_WELSH_TRANSLATION: caseFlagFieldState.FLAG_COMMENTS)">
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE_WELSH_TRANSLATION : caseFlagFieldState.FLAG_COMMENTS)">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'comments (Welsh)' | rpxTranslate}}</span>
       </a>
     </dd>
@@ -77,8 +77,8 @@
       {{flagStatus | rpxTranslate}}
     </dd>
     <dd class="govuk-summary-list__actions">
-      <a class="govuk-link" href="javascript:void(0)"
-        (click)="changeButtonEmitter.emit(caseFlagFieldState.FLAG_UPDATE)">
+      <a *ngIf="is2Point1Enabled" class="govuk-link" href="javascript:void(0)"
+        (click)="changeButtonEmitter.emit(this.summaryListDisplayMode === displayMode.MANAGE ? caseFlagFieldState.FLAG_UPDATE : caseFlagFieldState.FLAG_STATUS)">
         {{'Change' | rpxTranslate}}<span class="govuk-visually-hidden"> {{'status' | rpxTranslate}}</span>
       </a>
     </dd>
