--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/collection/write-collection-field.html
@@ -5,7 +5,7 @@
     <h2 class="heading-h2 error-spacing">
       {{(caseField | ccdFieldLabel)}}
     </h2>
-    <button class="button write-collection-add-item__top" type="button" (click)="addItem(true)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter()">{{'Add new' | rpxTranslate}}</button>
+    <button class="button write-collection-add-item__top" type="button" (click)="addItem(true)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter() || allFieldsReadOnly">{{'Add new' | rpxTranslate}}</button>
     <h2 class="heading-h2 error-spacing" *ngIf="caseField.hint_text || formArray.errors">
       <span *ngIf="caseField.hint_text" class="form-hint">{{caseField.hint_text | rpxTranslate }}</span>
       <span *ngIf="formArray.errors" class="error-message">
@@ -22,7 +22,7 @@
           </div>
           <div class="float-right">
             <button class="button button-secondary" type="button" (click)="openModal(i)"
-                    [disabled]="isNotAuthorisedToDelete(i)"
+                    [disabled]="isNotAuthorisedToDelete(i) || allFieldsReadOnly"
                     attr.aria-label="Remove {{ itemLabel(i) }}">{{'Remove' | rpxTranslate}}</button>
           </div>
         </div>
@@ -39,7 +39,7 @@
 
     </div>
 
-    <button class="button write-collection-add-item__bottom" type="button" (click)="addItem(false)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter()" *ngIf="caseField.value && caseField.value.length">{{'Add new' | rpxTranslate }}</button>
+    <button class="button write-collection-add-item__bottom" type="button" (click)="addItem(false)" [disabled]="isNotAuthorisedToCreate() || isSearchFilter() || allFieldsReadOnly" *ngIf="caseField.value && caseField.value.length">{{'Add new' | rpxTranslate }}</button>
 
   </div>
 
