--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/history/event-log/event-log-table.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/history/event-log/event-log-table.component.html
@@ -8,7 +8,7 @@
   </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let event of events" (click)="select(event)" [ngClass]="{'EventLogTable-Selected': selected === event}" tabindex="0" attr.aria-label="{{getAriaLabelforRow(event)}}">
+  <tr *ngFor="let event of events" (click)="select(event)" (keyUp)="select(event)" [ngClass]="{'EventLogTable-Selected': selected === event}" tabindex="0" attr.aria-label="{{getAriaLabelforRow(event)}}">
     <td>
       <ng-container [ngSwitch]="isPartOfCaseTimeline">
         <div id="case-timeline" *ngSwitchCase="true">
