--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -33,19 +33,16 @@
           </label>
         </div>
       </th>
-      <th *ngFor="let col of resultView.columns">
-        <table class="search-result-column-header">
-          <tr>
-            <th [attr.aria-sort]="isSortAscending(col) === null ? null : (isSortAscending(col) ? 'ascending' : 'descending')">
-              <div class="search-result-column-label" (click)="sort(col)" (keyup)="noop()">
-                {{col.label | rpxTranslate}}
-              </div>
-              <div *ngIf="comparator(col)" class="search-result-column-sort">
-                <a (click)="sort(col)" class="sort-widget" [innerHTML]="sortWidget(col)" href="javascript:void(0)"></a>
-              </div>
-            </th>
-          </tr>
-        </table>
+      <th *ngFor="let col of resultView.columns" class="search-result-column-header"
+        [attr.aria-sort]="isSortAscending(col) === null ? null : (isSortAscending(col) ? 'ascending' : 'descending')">
+        <div>
+          <div class="search-result-column-label" (click)="sort(col)" (keyup)="noop()">
+            {{col.label | rpxTranslate}}
+          </div>
+          <div *ngIf="comparator(col)" class="search-result-column-sort">
+            <a (click)="sort(col)" class="sort-widget" [innerHTML]="sortWidget(col)" href="javascript:void(0)"></a>
+          </div>
+        </div>
       </th>
       <th *ngIf="activityEnabled()" style="width: 110px;"></th>
     </tr>
