--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/search-result/search-result.component.html
@@ -29,7 +29,6 @@
       <th *ngIf="selectionEnabled" class="govuk-table__checkbox" scope="col">
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="select-all" name="select-all" type="checkbox" (change)="selectAll()" [checked]="allOnPageSelected()" [disabled]="!canAnyBeShared()" />
-          <input class="govuk-checkboxes__input" id="select-all" name="select-all" type="checkbox" (change)="selectAll()" [checked]="allOnPageSelected()" [disabled]="canAnyBeShared()" />
           <label class="govuk-label govuk-checkboxes__label" for="select-all">
             Select all
           </label>
@@ -40,7 +39,7 @@
           [attr.aria-label]="('Sort by ' + col.label + ' ' + isSortAscending(col)? 'ascending' : 'descending') | rpxTranslate">
           <tr>
             <th>
-              <div class="search-result-column-label" (click)="sort(col)">
+              <div class="search-result-column-label" (click)="sort(col)" (keyup)="sort(col)">
                 {{col.label | rpxTranslate}}
               </div>
               <div *ngIf="comparator(col)" class="search-result-column-sort">
@@ -61,7 +60,7 @@
         <td *ngIf="selectionEnabled" class="govuk-table__checkbox" scope="col">
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="select-{{ result.case_id }}" name="select-{{ result.case_id }}"
-              type="checkbox" (change)="changeSelection(result)" [checked]="isSelected(result)" [disabled]="canBeShared(result)" />
+              type="checkbox" (change)="changeSelection(result)" [checked]="isSelected(result)" [disabled]="!canBeShared(result)" />
             <label class="govuk-label govuk-checkboxes__label" for="select-{{ result.case_id }}">
               Select case {{ result.case_id }}
             </label>
@@ -98,7 +97,7 @@
         <td *ngIf="selectionEnabled" class="govuk-table__checkbox" scope="col">
           <div class="govuk-checkboxes__item">
             <input class="govuk-checkboxes__input" id="select-{{ result.case_id }}" name="select-{{ result.case_id }}"
-              type="checkbox" (change)="changeSelection(result)" [checked]="isSelected(result)" [disabled]="canBeShared(result)" (keyup)="onKeyUp($event, result)" />
+              type="checkbox" (change)="changeSelection(result)" [checked]="isSelected(result)" [disabled]="!canBeShared(result)" (keyup)="onKeyUp($event, result)" />
             <label class="govuk-label govuk-checkboxes__label" for="select-{{ result.case_id }}">
               Select case {{ result.case_id }}
             </label>
