--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-flag/components/case-flag-summary-list/case-flag-summary-list.component.html
@@ -69,7 +69,7 @@
       </a>
     </dd>
   </div>
-  <div class="govuk-summary-list__row" *ngIf="flagDescriptionWelsh?.length > 0">
+  <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       {{'Status' | rpxTranslate}}
     </dt>
