--- a/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
+++ b/projects/ccd-case-ui-toolkit/src/lib/shared/components/palette/case-file-view/case-file-view-field.component.html
@@ -46,6 +46,7 @@
                          [enableAnnotations]="true"
                          [enableRedactions]="true"
                          [height]="'94.5vh'"
+                         [caseId]="caseId"
                          [enableICP]="isIcpEnabled()">
         </mv-media-viewer>
       </ng-container>
